--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
 title: ANCM 2024 Website
 description: This website contains materials for the ANCM2024 course 
