--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-rdt-theme
 title: ANCM 2024 Website
 description: This website contains materials for the ANCM2024 course 
