--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,6 +4,6 @@ title: ANCM 2024
 description: This website contains materials for the ANCM2024 course 
 
 repository:
-  url: https://github.com/clclab/ANCM # Online location of your book
+  url: https://annabavaresco.github.io/ancm2024/ # Online location of your book
   path_to_book: docs # Optional path to your book, relative to the repository root
   branch: main # Which branch of the repository should be used when creating links (optional)
