--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,6 @@ repository:
   url: https://annabavaresco.github.io/ancm2024/main # Online location of your book
   # path_to_book: docs # Optional path to your book, relative to the repository root
   branch: main # Which branch of the repository should be used when creating links (optional)
+
+exclude:
+  README.md
