--- a/_toc.yml
+++ b/_toc.yml
@@ -4,7 +4,7 @@ root: README
 parts:
   - caption: Lab assignments
     chapters:
-      - file: 1_Logistic_regression_for_musical_tags.ipynb
+      - file: 1_Logistic_regression_for_musical_tags
         # sections:
         #   - file: 01_lab_Logistic-regression-for-musical-tags
       - file: week_2
